# tlon-uqbar

./: .gitignore  main.py  pyproject.toml
scripts/: clean.py
src/bandmix_cli/: __init__.py  auth.py  client.py  enums.py  formatters.py  main.py  models.py  parser.py
src/bandmix_cli/commands/: auth.py  calendar.py  feed.py  hidden.py  matches.py  member.py  messages.py  music.py  musiclist.py  photos.py  profile.py  search.py  seeking.py  settings.py  videos.py
src/tlon_uqbar/: __main__.py
tests/: test_auth.py  test_client.py  test_core.py  test_enums.py  test_formatters.py  test_member.py  test_messages.py  test_models.py  test_parser.py  test_profile.py  test_remaining_commands.py  test_search.py
