[project]
name = "tlon-uqbar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tlon = "tlon_uqbar.__main__:main"

[dependency-groups]
dev = [
    "tlon_uqbar",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
local = [
    "ipython>=9.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlon_uqbar"]

