[project]
name = "bandmix-cli"



version = "0.5.0"

description = "CLI tool for reading and writing data on BandMix.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.5",
]

[project.scripts]
bandmix = "bandmix_cli.main:main"

[dependency-groups]
dev = [
    "bandmix_cli",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pre-commit>=4.5.1",
    "responses>=0.25",
]
local = [
    "ipython>=9.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bandmix_cli"]
